Using Stream.toList() instead of older idiom Stream.collect(Collectors.toList())